5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1791_1599.log
== TEST (2019-05-29 14:26:02) 
-- CODE:
from nunmpy import*

v1 = float(eval(input("")))
d = 0.15
print(v1*d)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from nunmpy import*
ModuleNotFoundError: No module named 'nunmpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:26:11) 
-- CODE:
from numpy import*

v1 = float(eval(input("")))
d = 0.15
print(v1*d)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:26:36) 
-- CODE:
from numpy import*

v1 = int(eval(input("")))
d = 0.15
print(v1*d)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:27:39) 
-- CODE:
from numpy import*

v1 = int(input(""))
d = 0.15
print(v1*d)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:28:10) 
-- CODE:
from numpy import*

v1 = float(input(""))
d = 0.15
print(v1*d)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:28:38) 
-- CODE:
from numpy import*

v1 = string(input(""))
d = 0.15
print(v1*d)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:28:52) 
-- CODE:
from numpy import*

v1 = (input(""))
d = 0.15
print(v1*d)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:30:05) 
-- CODE:
from numpy import*

v1 = input("")
d = 0.15
w = v1*d
print(round(w,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:30:33) 
-- CODE:
from numpy import*

v1 = input("")
d = 0.15
w = float(v1*d)
print(round(w,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:38:52) 
-- CODE:
from numpy import*

v1 = input("")
d = 0.15

while ()
print(round(w,2))



-- EXECUTION TIME:
0.16979
-- ERROR:
  File "/home/codebench/codes/1791/1599/main.py", line 6
    while ()
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
